gitops/core/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app.kubernetes.io/name: ntfy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
