gitops/core/ntfy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway
  hostnames:
    - "ntfy.delaleusystems.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: ntfy
          port: 80
