gitops/core/ntfy/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ntfy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ntfy
  oidc:
    provider:
      issuer: https://login.delaleusystems.com/dex/
    clientID: envoy-gateway
    clientSecret:
      name: dex-envoy-client
    redirectURL: "https://ntfy.delaleusystems.com/oauth2/callback"
    logoutPath: "/logout"
